# WkHelper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  readme.md  requirements.txt
tests/: conftest.py
tests/core/: test_credential_store.py  test_entry_runner.py  test_homework_video.py
tests/platform/: test_async_contract.py
tests/ui/: test_rich_contract.py
wkhelper/: __init__.py  main.py  questions.db
wkhelper/core/: config.py  credential_store.py  db.py  deobfuscator.py  exceptions.py  exporter.py  font_mapping.json  homework.py  models.py  runner.py  utils.py  video.py
wkhelper/platform/: base.py  tree_utils.py  xuetangx.py  yuketang.py
wkhelper/solver/: __init__.py  base.py  local_db.py
wkhelper/ui/: interface.py  rich_ui.py
