[project]
name = "wkhelper"
version = "0.1.0"
description = "网课学习助手"
readme = "README.md"
requires-python = ">=3.12"
scripts = { wkhelper = "wkhelper.main:main" }
dependencies = [
  "httpx>=0.28.1",
  "httpx-ws>=0.7.1",
  "questionary>=2.1.1",
  "qrcode>=8.2",
  "rich>=14.3.3",
  "terminal-qrcode>=0.2.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pyrefly>=0.55.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.15.5",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_gitmoji"

[tool.pyright]
pythonVersion = "3.12"

[tool.pyrefly]
project-includes = ["wkhelper","tests"]
python-version = "3.12"

[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "UP",
  "I",
  "Q",
  "PERF",
]
pydocstyle = { convention = "google" }

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "wkhelper"
module-root = ""
